# vgi-x12

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/x12-core/: Cargo.toml
crates/x12-core/src/: delimiters.rs  edifact.rs  envelope.rs  lib.rs  segment.rs
crates/x12-core/src/shaped/: acks.rs  mod.rs  t270_271.rs  t835.rs  t837.rs  t850.rs
crates/x12-core/tests/: fixtures.rs
crates/x12-worker/: Cargo.toml
crates/x12-worker/src/: arrow_io.rs  main.rs  meta.rs  source.rs
crates/x12-worker/src/scalar/: delimiters.rs  mod.rs  transaction_type.rs  version.rs
crates/x12-worker/src/table/: edifact.rs  envelope.rs  mod.rs  segments.rs  segments_elements.rs  shaped.rs
data/: ack_997.997  claim_837.837  eligibility_271.271  era_835.835  inquiry_270.270  multi_group.edi  orders_edifact.edi  pipe_delims.edi  po_850.850  truncated.edi
test/sql/: edifact.test  envelope.test  files.test  robustness.test  scalars.test  segments.test  shaped.test
