[workspace]
resolver = "2"
members = ["crates/x12-core", "crates/x12-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-x12"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.7 and
# arrow 59 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0"
vgi-rpc = { version = "0", default-features = false, features = ["macros", "http"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

x12-core = { path = "crates/x12-core" }

[profile.release]
opt-level = 2
# Strip symbols + debug info from the release binary. The worker has no need for
# in-binary backtraces in production; build a debug profile locally for symbols.
strip = true
